tests/models/struct/unnamed/i64/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    i64
);
fn main() {}
